syntax = "proto3";

option go_package = "gethexec/";

package forward;

import "google/protobuf/empty.proto";
import "execution/gethexec/protos/inclusion_list.proto";

service ForwardApi {
    rpc SubmitInclusionList (inclusion.InclusionList) returns (google.protobuf.Empty) {}
}